src/objects/Forms__c.object
<CustomObject>
    <fields>
        <fullName>X22_Input_from_other_Geos_BLs_needed__c</fullName>
        <inlineHelpText>Will input/assistance from other Geographies/Business Lines be required?
If yes, please explain in Question 22a.</inlineHelpText>
        <label>22. Input from other Geos/BLs needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X22a_Strategy__c</fullName>
        <inlineHelpText>If input/assistance from other Geographies/Business Lines will be required, provide initial strategy here.</inlineHelpText>
        <label>22a. Strategy</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X23_Regulatory_risks__c</fullName>
        <inlineHelpText>Are there any regulatory risks?
If ‘Yes’, please explain mitigation plan below.</inlineHelpText>
        <label>23. Regulatory risks?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X23a_Regulatory_risk_mitigationo_plan__c</fullName>
        <inlineHelpText>If the answer to Question 23 was ‘Yes’, can these risks be mitigated? Provide explanation here.</inlineHelpText>
        <label>23a. Can regulatory risks be mitigated?</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X24_Fit_in_the_region_s_strategy__c</fullName>
        <inlineHelpText>Does the opportunity fit in the region’s strategy?  (If in doubt refer to the Regional Director or relevant Business Line Leader).</inlineHelpText>
        <label>24. Fit in the region&apos;s strategy?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X25_Would_it_develop_capability_in_a_BL__c</fullName>
        <inlineHelpText>Would the work develop AECOM’s capability in a particular Business Line</inlineHelpText>
        <label>25. Would it develop capability in a BL?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X26_Added_value_or_innovation__c</fullName>
        <inlineHelpText>Does the project have a specific need for added value or opportunity for innovation which can be delivered?</inlineHelpText>
        <label>26. Added value or innovation?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X27_Can_we_make_profit__c</fullName>
        <inlineHelpText>Can we make at least a ‘business as usual’ profit after proposal costs?</inlineHelpText>
        <label>27. Can we make profit?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X28_Potential_high_profit_opportunity__c</fullName>
        <inlineHelpText>Would the project present a potential high-profit opportunity?</inlineHelpText>
        <label>28. Potential high-profit opportunity?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X29_Opportunity_for_future_work__c</fullName>
        <inlineHelpText>Does the project provide an opportunity for substantially profitable future business?</inlineHelpText>
        <label>29. Opportunity for future work?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2_Any_Conflicts_of_Interest__c</fullName>
        <inlineHelpText>Are there any actual, perceived or potential conflicts of interest (Col) regarding AECOM&apos;s role on the project (e.g. is another Business Line or Region bidding)?  
If ‘Yes’, please provide an explanation below.</inlineHelpText>
        <label>2. Any Conflicts of Interest?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3_Conflict_of_Interest_Explanation__c</fullName>
        <inlineHelpText>If the answer to Question 2 is ‘Yes’, please provide an explanation here.</inlineHelpText>
        <label>3. Conflict of Interest Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X4_Are_risks_covered_by_insurance__c</fullName>
        <inlineHelpText>Are the risks involved typical project risks which would be covered under our:
a. Professional Indemnity Policy
b. Professional Liability (i.e. no warranties, performance guarantees, indemnification, fit for purposes)?</inlineHelpText>
        <label>4. Are risks covered by insurance?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5_1_Contractual_Basis_for_Reimbursement__c</fullName>
        <inlineHelpText>Lump Sum, etc.</inlineHelpText>
        <label>5-1. Contractual Basis for Reimbursement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X5_2_Governing_Law_of_Contract__c</fullName>
        <label>5-2. Governing Law of Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X5_3a_Terms_of_Payment_Notes__c</fullName>
        <inlineHelpText>If the answer to 5-3 is Yes, please describe here.</inlineHelpText>
        <label>5-3a. Terms of Payment Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X5_4_Unusual_Currency_Arrangements__c</fullName>
        <inlineHelpText>Are there unusual currency arrangements, including payment in a non-convertible currency? If ‘Yes’, describe what steps have been taken to minimize the risks in the notes below.</inlineHelpText>
        <label>5-4. Unusual Currency Arrangements?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5_4a_Currency_notes__c</fullName>
        <inlineHelpText>If the answer to 5.4 was ‘Yes’, describe here what steps have been taken to minimize the risks</inlineHelpText>
        <label>5.4a. Currency notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X5_5_Exposure_to_penalties__c</fullName>
        <inlineHelpText>Is there exposure to penalties for delay which could exceed 10% of the contract price or US$250,000, whichever is less?</inlineHelpText>
        <label>5.5. Exposure to penalties?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5_5a_Penalty_Notes__c</fullName>
        <inlineHelpText>If there is exposure to penalties for delay which could exceed 10% of the contract price or US$250,000, whichever is less, describe here.</inlineHelpText>
        <label>5-5a. Penalty Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X5_6_Third_party_guarantees_obligations__c</fullName>
        <inlineHelpText>Are there any guarantees or contingent obligations on behalf of any third party (including the non-AECOM portion of any LLC JV or similar arrangement)? If yes, describe below.</inlineHelpText>
        <label>5-6. Third-party guarantees/obligations?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5_6a_Third_party_notes__c</fullName>
        <inlineHelpText>If there are any guarantees or contingent obligations on behalf of any third party (including the non-AECOM portion of any LLC JV or similar arrangement), describe here.</inlineHelpText>
        <label>5-6a. Third-party notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X5_7_Boycott_Provision_other_risk__c</fullName>
        <inlineHelpText>Is there an Arab or other Boycott Provision or other country risk? If &apos;Yes&apos;, describe below</inlineHelpText>
        <label>5-7. Boycott Provision/other risk?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5_7a_Country_Risk_Notes__c</fullName>
        <inlineHelpText>If there are Arab or other Boycott Provision or other country risks, describe here.</inlineHelpText>
        <label>5-7a. Country Risk Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X5_Is_fee_consistent_w_min_fee_policy__c</fullName>
        <inlineHelpText>Is the likely fee consistent with our minimum fee policy (&gt; USD $25,000)?
If ‘No’, SVP approval must be sought under the Sub-Delegations of Authority.</inlineHelpText>
        <label>5. Is fee consistent w/ min. fee policy?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X6_Are_terms_acceptable__c</fullName>
        <inlineHelpText>Are we able to work within the contract and payment terms (whether Client or AECOM Standard Contract)?
If &apos;No&apos;, refer to the Contracts Manager.</inlineHelpText>
        <label>6. Are terms acceptable?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X7_Safety_security_or_travel_risks__c</fullName>
        <inlineHelpText>Are there potential safety, security or travel risks associated with the proposal or project?
If &apos;Yes&apos;, contact the office&apos;s Safety, Health and Environmental Director/Manager.</inlineHelpText>
        <label>7. Safety, security or travel risks?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X8_Safety_health_or_environment_risks__c</fullName>
        <inlineHelpText>Have initial Safety, Health and Environmental risks been identified and reviewed?
If ‘No’, please provide an explanation below.</inlineHelpText>
        <label>8. Safety, health or environment risks?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X8a_SHE_Risk_explanation__c</fullName>
        <inlineHelpText>If the answer to Question 8 is ‘No’, please provide an explanation here.</inlineHelpText>
        <label>8a. SH&amp;E risk explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X9_Are_partners_needed__c</fullName>
        <inlineHelpText>Are other types of project partners needed? i.e. formal Joint Venture, Alliance, etc.</inlineHelpText>
        <label>9. Are partners needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X9a_If_yes_who__c</fullName>
        <inlineHelpText>Names of partner accounts that will be needed for this project.</inlineHelpText>
        <label>9a. If yes, who?</label>
        <type>TextArea</type>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Opportunity__c</columns>
        <columns>Project_Location__c</columns>
        <columns>Proposal_Submission_Date__c</columns>
        <columns>Bid_Proposal_Budget_from_opp__c</columns>
        <columns>Bid_Manager__c</columns>
        <columns>Business_Line__c</columns>
        <columns>Capture_Manager_from_Opp__c</columns>
        <columns>Date__c</columns>
        <columns>Net_Fee__c</columns>
        <columns>Net_Revenue_TO_Project__c</columns>
        <columns>Net_Revenue_TO_Project_from_opp__c</columns>
        <columns>Note_to_Approvers__c</columns>
        <columns>Notification_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FRM-{0000000}</displayFormat>
        <label>Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <recordTypes>
        <fullName>Go_NoGo_Checklist_ME</fullName>
        <active>true</active>
        <description>Middle East Go - NoGo</description>
        <label>Go - NoGo Checklist (Q3ME-121-FM2)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ME_Risk_Analysis_Form</fullName>
        <active>true</active>
        <description>Middle East use. This risk analysis form is to be submitted in support of applications for approval under the exceptions to the Delegations of Authority where specified in Table D-1 or Table D-2 of the Delegations.</description>
        <label>ME Risk Analysis Form (R3ME-121-FM2)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>